cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug217798.cpp
int bug217798_main() {
    static a = 1;
    
    return 0;
}
